FFmpegfs NEWS

Important changes in 2.17 (2024-08-XX):

* Bugfix: Wrong error message fixed when an invalid audio/video codec was
  selected. The message should rather say "unsupported codec" instead of
  talking about "sample format not supported.".

Important changes in 2.16 (2024-06-10):

* Bugfix: Closes#1072412: Fix build with FFmpeg 7.0. write_packet() now with
  const buffer as of Libavformat 61+.
* Fixed deprecation: 2014-05-18 - 68c0518 / fd05602 - lavc 55.63.100 / 55.52.0
  - avcodec.h
  Add avcodec_free_context(). From now on it should be used for freeing
  AVCodecContext.
* Fixed deprecation: 2023-05-15 - 7d1d61cc5f5 - lavc 60 - avcodec.h
  Depreate AVCodecContext.ticks_per_frame in favor of
  AVCodecContext.framerate (encoding) and
  AV_CODEC_PROP_FIELDS (decoding).

Important changes in 2.15 (2024-02-03):

* Bugfix: Issue #151: Fixed autocopy STRICT never triggers for video streams
* Bugfix: Issue #153: The --include_extensions parameter now contains a
  description, which was previously missing from the manual and online help.
* Issue #149: 2023-05-04 - xxxxxxxxxx - lavu 58.7.100 - frame.h
  Deprecate AVFrame.interlaced_frame, AVFrame.top_field_first, and
  AVFrame.key_frame.
  Add AV_FRAME_FLAG_INTERLACED, AV_FRAME_FLAG_TOP_FIELD_FIRST, and
  AV_FRAME_FLAG_KEY flags as replacement.
* Issue #149: 2023-05-04 - xxxxxxxxxx - lavu 58.7.100 - frame.h
  Deprecate AVFrame.interlaced_frame, AVFrame.top_field_first, and
  AVFrame.key_frame.
  Add AV_FRAME_FLAG_INTERLACED, AV_FRAME_FLAG_TOP_FIELD_FIRST, and
  AV_FRAME_FLAG_KEY flags as replacement.
* Issue #149: 2021-09-20 - dd846bc4a91 - lavc 59.8.100 - avcodec.h codec.h
  Deprecate AV_CODEC_FLAG_TRUNCATED and AV_CODEC_CAP_TRUNCATED,
  as they are redundant with parsers.
* Issue #136: The CMake build files have been removed. Support was never more
  than experimental, and CMake lacks a good uninstall option. Will stick to
  automake system from now on.

Important changes in 2.14 (2023-06-15):
